# clidir

./: .gitignore  LICENSE  README.md  class.py  help.py  main.py  pyproject.toml  rapyd.py  setup.py  test.py
.github/workflows/: test.yml
commands/customer/: create.py  retrieve.py
commands/customer/list/: all.py  delete.py
commands/payment/: create.py  retrieve.py
commands/payment/list/: all.py
commands/payout/: create.py  retrieve.py
pycli/: command.py  command_loader.py  help.py  init.py  invoker.py  parser.py  pycli.py
src/: arg_parser.py  clidir.py  command_loader.py  help.py
tests/: test_clidir.py
tests/commands/hello/: person.py
